--- a/app/views/products/_products_grid.html.erb
+++ b/app/views/products/_products_grid.html.erb
@@ -28,7 +28,7 @@
   end
 
   g.column name: t('activerecord.attributes.product.type') do |product|
-    product.type
+    product.product_type
   end
 
   g.column name: t('activerecord.attributes.time_stamp.updated_at') do |product|
