--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -61,11 +61,11 @@
 <div class="hr-line-dashed"></div>
 
   <div class="form-group">
-      <div class="col-sm-4 col-sm-offset-2">
-          <%= f.submit t('buttons.save'), class: 'btn btn-primary btn-sm', id: 'client-save-btn' %>
-          or
-          <%= link_to t('activerecord.text.back_to_list', model: Product.model_name.human),
-          clients_path %>
+      <div class="pull-right m-r-md">
+          <%= f.submit t('buttons.save'), class: 'btn btn-primary btn-w-m' %>
+      </div>
+      <div class="m-l-md">
+        <%= link_to t('activerecord.text.back_to_list', model: Product.model_name.human), products_path, class: 'btn btn-white' %>
       </div>
   </div>
 <% end %>
