--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -20,7 +20,7 @@
         <div class="col-lg-12">
             <div class="ibox">
                 <div class="ibox-title">
-
+                    <%= t('labels.all_required') %>
                     <div class="ibox-tools">
                     </div>
                 </div>
