--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,7 +34,7 @@
                 <div class="col-lg-5">
                     <dl class="dl-horizontal">
 
-                        <dt><%= t('activerecord.attributes.product.manager_name') %>:</dt>
+                        <dt><%= t('activerecord.attributes.product.product_manager') %>:</dt>
                         <dd><%= @product.product_manager.name if @product.product_manager %> </dd>
                         <dt><%= t('activerecord.attributes.product.name') %>:</dt>
                         <dd><%= @product.name %></dd>
