--- a/app/views/products/_search_form.html.erb
+++ b/app/views/products/_search_form.html.erb
@@ -5,6 +5,7 @@
   <%= f.input :consultant_name, required: false, label: t('activerecord.attributes.product.consultant_name') %>
 
   <div class="form-group">
-      <%= f.submit t('buttons.search'), class: 'btn btn-white btn-sm' %>
+      <%= link_to t('buttons.reset'), products_path, class: 'btn btn-white btn-sm' %>
+      <%= f.submit t('buttons.search'), class: 'btn btn-info btn-sm pull-right' %>
   </div>
 <% end %>
