--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -27,6 +27,8 @@
                     <div class="table-responsive">
                         <%= render partial: 'products_grid' %>
                     </div>
+
+                    <%= link_to(t('buttons.download_as_excel'), products_path(@query_params.merge(format: :xls)), class: 'btn btn-w-m btn-white btn-sm') if @products_grid.count > 0 %>
                 </div>
 
             </div>
