--- a/app/views/consultants/index.html.erb
+++ b/app/views/consultants/index.html.erb
@@ -15,25 +15,14 @@
 
 <div class="wrapper wrapper-content">
     <div class="row">
+        <div class="col-lg-12 m-b-md">
+            <%= link_to t('activerecord.text.new_instance', model: Consultant.model_name.human), new_consultant_path, class: 'btn btn-primary btn-w-m', method: :get %>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-lg-12">
             <div class="ibox">
                 <div class="ibox-content">
-
-                    <div class="m-b-lg">
-
-                        <div>
-
-                            <div class="pull-right">
-                                <%= link_to t('activerecord.text.new_instance', model: Consultant.model_name.human), new_consultant_path, class: 'btn-primary btn-sm btn' %>
-                            </div>
-
-                            <div class="btn-group">
-
-                            </div>
-
-                        </div>
-
-                    </div>
 
                     <div class="table-responsive">
                         <%= render partial: 'consultants_grid' %>
