--- a/app/views/banks/index.html.erb
+++ b/app/views/banks/index.html.erb
@@ -1,12 +1,12 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2><%= t('activerecord.text.instances_list', model: Department.model_name.human) %></h2>
+        <h2><%= t('activerecord.text.instances_list', model: Bank.model_name.human) %></h2>
         <ol class="breadcrumb">
             <li>
                 <%= link_to t('text.home'), root_path %>
             </li>
             <li class="active">
-                <strong><%= t('activerecord.text.instances_list', model: Department.model_name.human) %></strong>
+                <strong><%= t('activerecord.text.instances_list', model: Bank.model_name.human) %></strong>
             </li>
         </ol>
     </div>
@@ -16,7 +16,7 @@
 <div class="wrapper wrapper-content">
   <div class="row">
       <div class="col-lg-12 m-b-md">
-          <%= link_to t('activerecord.text.new_instance', model: Department.model_name.human), new_department_path, class: 'btn-primary btn-w-m btn' %>
+          <%= link_to t('activerecord.text.new_instance', model: Bank.model_name.human), new_bank_path, class: 'btn-primary btn-w-m btn' %>
       </div>
   </div>
     <div class="row">
@@ -25,7 +25,7 @@
                 <div class="ibox-content">
 
                     <div class="table-responsive">
-                        <%= render partial: 'departments_grid' %>
+                        <%= render partial: 'banks_grid' %>
                     </div>
                 </div>
 
