--- a/app/views/consultants/_consultants_grid.html.erb
+++ b/app/views/consultants/_consultants_grid.html.erb
@@ -1,25 +1,39 @@
 <%= grid(@consultants_grid, :show_filters => :when_filtered) do |g|
 
+  
   g.column name: '#' do |consultant|
     consultant.id
   end
+  
 
+  
   g.column name: t('activerecord.attributes.consultant.name'), class: 'project-title' do |consultant|
-    link_to(consultant.name, consultant_path(consultant))
+      link_to(consultant.name, consultant_path(consultant))
+  end
+  
+
+  
+  g.column name: t('activerecord.attributes.consultant.department_id') do |consultant|
+    consultant.department_id
   end
 
-  g.column name: t('activerecord.attributes.consultant.department') do |consultant|
-    consultant.department.name if consultant.department
-  end
 
+  
+  g.column name: t('activerecord.attributes.time_stamp.created_at') do |consultant|
+    consultant.created_at.strftime('%Y-%m-%d %H:%M:%S')
+  end
+  
+
+  
   g.column name: t('activerecord.attributes.time_stamp.updated_at') do |consultant|
     consultant.updated_at.strftime('%Y-%m-%d %H:%M:%S')
   end
+  
 
   g.column html: {class: 'project-actions'} do |consultant|
     [
-      link_to(fa_icon("pencil"), edit_consultant_path(consultant), class: 'btn btn-white btn-sm', remote: true, data: {toggle: 'tooltip'}, title: t('buttons.edit')),
-      link_to(fa_icon("trash"), consultant_path(consultant), class: 'btn btn-danger btn-sm', method: :delete, data: {confirm: t('confirms.delete'), toggle: 'tooltip'}, title: t('buttons.delete'))
+      link_to(fa_icon("pencil"), edit_consultant_path(consultant), class: 'btn btn-white btn-xs', data: {toggle: 'tooltip'}, title: t('buttons.edit')),
+      link_to(fa_icon("trash"), consultant_path(consultant), class: 'btn btn-danger btn-xs', method: :delete, data: {toggle: 'tooltip', confirm: t('confirms.delete')}, title: t('buttons.delete'))
     ].join(' ').html_safe
   end
 end -%>
