--- a/app/views/consultants/index.html.erb
+++ b/app/views/consultants/index.html.erb
@@ -14,13 +14,13 @@
 </div>
 
 <div class="wrapper wrapper-content">
+  <div class="row">
+      <div class="col-lg-12 m-b-md">
+          <%= link_to t('activerecord.text.new_instance', model: Consultant.model_name.human), new_consultant_path, class: 'btn-primary btn-w-m btn' %>
+      </div>
+  </div>
     <div class="row">
-        <div class="col-lg-12 m-b-md">
-            <%= link_to t('activerecord.text.new_instance', model: Consultant.model_name.human), new_consultant_path, class: 'btn btn-primary btn-w-m', method: :get %>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-10">
             <div class="ibox">
                 <div class="ibox-content">
 
@@ -31,6 +31,22 @@
 
             </div>
         </div>
-    </div>
 
+        <div class="col-lg-2">
+            <div class="ibox">
+                <div class="ibox-title">
+                    <h5><%= t('labels.search') %></h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="ibox-content" style="display: block;">
+                    <%= render 'search_form' %>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
