--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -1,10 +1,15 @@
 <%= simple_form_for(@department) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-  </div>
+  
+  <div class="hr-line-dashed"></div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
+  <div class="form-group">
+      <div class="pull-right m-r-md">
+          <%= f.submit t('buttons.save'), class: 'btn btn-primary btn-w-m' %>
+      </div>
+      <div class="m-l-md">
+        <%= link_to t('activerecord.text.back_to_list', model: Department.model_name.human), @departments_path, class: 'btn btn-white' %>
+      </div>
   </div>
 <% end %>
