--- a/app/views/products/_search_form.html.erb
+++ b/app/views/products/_search_form.html.erb
@@ -6,6 +6,6 @@
 
   <div class="form-group">
       <%= link_to t('buttons.reset'), products_path, class: 'btn btn-white btn-sm' %>
-      <%= f.submit t('buttons.search'), class: 'btn btn-info btn-sm pull-right' %>
+      <%= f.submit t('buttons.search'), class: 'btn btn-primary btn-sm pull-right' %>
   </div>
 <% end %>
