--- a/app/views/trustors/_form.html.erb
+++ b/app/views/trustors/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@consultant) do |f| %>
+<%= simple_form_for(@trustor) do |f| %>
   <%= f.error_notification %>
 
   
@@ -9,7 +9,7 @@
           <%= f.submit t('buttons.save'), class: 'btn btn-primary btn-w-m' %>
       </div>
       <div class="m-l-md">
-        <%= link_to t('activerecord.text.back_to_list', model: Consultant.model_name.human), @consultants_path, class: 'btn btn-white' %>
+        <%= link_to t('activerecord.text.back_to_list', model: Trustor.model_name.human), @trustors_path, class: 'btn btn-white' %>
       </div>
   </div>
 <% end %>
