--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -14,26 +14,15 @@
 </div>
 
 <div class="wrapper wrapper-content">
+  <div class="row">
+      <div class="col-lg-12 m-b-md">
+          <%%= link_to t('activerecord.text.new_instance', model: <%= class_name.split('::').last %>.model_name.human), new_<%= singular_table_name %>_path, class: 'btn-primary btn-w-m btn' %>
+      </div>
+  </div>
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-10">
             <div class="ibox">
                 <div class="ibox-content">
-
-                    <div class="m-b-lg">
-
-                        <div>
-
-                            <div class="pull-right">
-                                <%%= link_to t('activerecord.text.new_instance', model: <%= class_name.split('::').last %>.model_name.human), new_<%= singular_table_name %>_path, class: 'btn-primary btn-sm btn' %>
-                            </div>
-
-                            <div class="btn-group">
-
-                            </div>
-
-                        </div>
-
-                    </div>
 
                     <div class="table-responsive">
                         <%%= render partial: '<%= plural_table_name %>_grid' %>
@@ -42,6 +31,22 @@
 
             </div>
         </div>
-    </div>
 
+        <div class="col-lg-2">
+            <div class="ibox">
+                <div class="ibox-title">
+                    <h5><%%= t('labels.search') %></h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="ibox-content" style="display: block;">
+                    <%%= render 'search_form' %>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
