refined template complete

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -116,9 +116,9 @@
                     <dl class="dl-horizontal">
 
                         <dt><%= t('activerecord.attributes.product.sales_department') %>:</dt>
-                        <dd><%= @product.sales_department.name %></dd>
+                        <dd><%= @product.sales_department.name if @product.sales_department %></dd>
                         <dt><%= t('activerecord.attributes.product.consultant_reference_department') %>:</dt>
-                        <dd><%= @product.consultant_reference_department.name %></dd>
+                        <dd><%= @product.consultant_reference_department.name if @product.consultant_reference_department %></dd>
 
                     </dl>
                 </div>
@@ -126,9 +126,9 @@
                     <dl class="dl-horizontal">
 
                       <dt><%= t('activerecord.attributes.product.operation_department') %>:</dt>
-                      <dd><%= @product.operation_department.name %> </dd>
+                      <dd><%= @product.operation_department.name if @product.operation_department %> </dd>
                       <dt><%= t('activerecord.attributes.product.consultant_name') %>:</dt>
-                      <dd><%= @product.consultant.name %> </dd>
+                      <dd><%= @product.consultant.name if @product.consultant %> </dd>
 
                     </dl>
                 </div>
