--- a/app/views/banks/_form.html.erb
+++ b/app/views/banks/_form.html.erb
@@ -9,7 +9,7 @@
           <%= f.submit t('buttons.save'), class: 'btn btn-primary btn-w-m' %>
       </div>
       <div class="m-l-md">
-        <%= link_to t('activerecord.text.back_to_list', model: Bank.model_name.human), @banks_path, class: 'btn btn-white' %>
+        <%= link_to t('activerecord.text.back_to_list', model: Bank.model_name.human), banks_path, class: 'btn btn-white' %>
       </div>
   </div>
 <% end %>
