--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -12,7 +12,7 @@
           <%%= f.submit t('buttons.save'), class: 'btn btn-primary btn-w-m' %>
       </div>
       <div class="m-l-md">
-        <%%= link_to t('activerecord.text.back_to_list', model: <%= class_name.split('::').last %>.model_name.human), @<%= table_name %>_path, class: 'btn btn-white' %>
+        <%%= link_to t('activerecord.text.back_to_list', model: <%= class_name.split('::').last %>.model_name.human), <%= table_name %>_path, class: 'btn btn-white' %>
       </div>
   </div>
 <%% end %>
