--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -45,7 +45,7 @@
                         <dd> <%= @client.sales_man_code %></dd>
                     </dl>
                 </div>
-                <div class="col-lg-7" id="cluster_info">
+                <div class="col-lg-7">
                     <dl class="dl-horizontal">
 
                         <dt><%= t('activerecord.attributes.client.traded_at') %>:</dt>
@@ -70,7 +70,7 @@
                         <dd><%= @client.person_in_charge_id_number %> </dd>
                     </dl>
                 </div>
-                <div class="col-lg-7" id="cluster_info">
+                <div class="col-lg-7">
                     <dl class="dl-horizontal">
 
 
