--- a/app/views/consultants/show.html.erb
+++ b/app/views/consultants/show.html.erb
@@ -34,7 +34,7 @@
                         <dd>Value</dd>
                     </dl>
                 </div>
-                <div class="col-lg-7" id="cluster_info">
+                <div class="col-lg-7">
                     <dl class="dl-horizontal">
                         <dt>Field2: </dt>
                         <dd>Value</dd>
