--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,7 +4,7 @@
             <li class="nav-header">
                 <div class="dropdown profile-element">
                     <span>
-                        <%= image_tag 'f3.png', size: "48x48", class: 'img-circle', alt: 'avatar' %>
+                        <%= image_tag 'icon-people-circle.svg', size: "48x48", class: 'img-circle', alt: 'avatar' %>
                     </span>
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <span class="clear">
