--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -44,7 +44,7 @@
                         <dd> <%= @product.code %></dd>
                     </dl>
                 </div>
-                <div class="col-lg-7" id="cluster_info">
+                <div class="col-lg-7">
                     <dl class="dl-horizontal">
 
                         <dt><%= t('activerecord.attributes.product.product_type') %>:</dt>
@@ -61,37 +61,6 @@
                 <div class="col-lg-5">
                     <dl class="dl-horizontal">
 
-                        <dt><%= t('activerecord.attributes.product.trustor_name') %>:</dt>
-                        <dd><%= @product.trustor_bank_account.trustor.name if @product.trustor_bank_account %></dd>
-                        <dt><%= t('activerecord.attributes.product.trustor_bank_name') %>:</dt>
-                        <dd><%= @product.trustor_bank_account.bank.name if @product.trustor_bank_account %></dd>
-                        <dt><%= t('activerecord.attributes.product.trustor_bank_account') %>:</dt>
-                        <dd><%= @product.trustor_bank_account.name if @product.trustor_bank_account %> </dd>
-                        <dt><%= t('activerecord.attributes.product.trustor_account_name') %>:</dt>
-                        <dd><%= @product.trustor_bank_account.number if @product.trustor_bank_account %> </dd>
-
-                    </dl>
-                </div>
-                <div class="col-lg-7" id="cluster_info">
-                    <dl class="dl-horizontal">
-
-                        <dt><%= t('activerecord.attributes.product.securities_account_name') %>:</dt>
-                        <dd><%= @product.securities_broker_account.name if @product.securities_broker_account %></dd>
-                        <dt><%= t('activerecord.attributes.product.securities_bank_name') %>:</dt>
-                        <dd><%= @product.securities_broker_account.securities_broker.name if @product.securities_broker_account %></dd>
-                        <dt><%= t('activerecord.attributes.product.securities_capital_account') %>:</dt>
-                        <dd><%= @product.securities_broker_account.number if @product.securities_broker_account %> </dd>
-                        <dt><%= t('activerecord.attributes.product.deposited_at') %>:</dt>
-                        <dd><%= @product.deposited_at.strftime('%Y-%m-%d') if @product.deposited_at %></dd>
-
-                    </dl>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-5">
-                    <dl class="dl-horizontal">
-
                         <dt><%= t('activerecord.attributes.product.delegation_started_at') %>:</dt>
                         <dd><%= @product.delegation_started_at.strftime('%Y-%m-%d') if @product.delegation_started_at %></dd>
                         <dt><%= t('activerecord.attributes.product.delegation_ended_at') %>:</dt>
@@ -99,7 +68,7 @@
 
                     </dl>
                 </div>
-                <div class="col-lg-7" id="cluster_info">
+                <div class="col-lg-7">
                     <dl class="dl-horizontal">
 
                       <dt><%= t('activerecord.attributes.product.delegation_duration') %>:</dt>
@@ -122,7 +91,7 @@
 
                     </dl>
                 </div>
-                <div class="col-lg-7" id="cluster_info">
+                <div class="col-lg-7">
                     <dl class="dl-horizontal">
 
                       <dt><%= t('activerecord.attributes.product.operation_department') %>:</dt>
@@ -140,9 +109,15 @@
                         <div class="panel-heading">
                             <div class="panel-options">
                                 <ul class="nav nav-tabs">
-                                    <li class="active"><a href="#tab-1" data-toggle="tab">费率</a></li>
-                                    <li class=""><a href="#tab-2" data-toggle="tab">交易账号</a></li>
-                                    <li class=""><a href="#tab-3" data-toggle="tab">投资人列表</a></li>
+                                    <% @tabs.each do |tab| %>
+                                    <% if @current_tab == tab %>
+                                    <li class="active">
+                                    <% else %>
+                                    <li class="">
+                                    <% end %>
+                                      <%= link_to t("activerecord.attributes.product.tabs.#{tab}"), product_path(@product, tab: tab) %>
+                                    </li>
+                                    <% end %>
                                 </ul>
                             </div>
                         </div>
@@ -150,85 +125,17 @@
                         <div class="panel-body">
 
                             <div class="tab-content">
-                                <div class="tab-pane active" id="tab-1">
-
-                                    <div class="row">
-                                        <div class="col-lg-5">
-                                            <dl class="dl-horizontal">
-
-                                                <dt><%= t('activerecord.attributes.product.fee_calculation_standard') %>:</dt>
-                                                <dd><%= @product.fee_calculation_standard %></dd>
-                                                <dt><%= t('activerecord.attributes.product.trustor_fee_ratio') %>:</dt>
-                                                <dd><%= @product.trustor_fee_ratio %></dd>
-                                                <dt><%= t('activerecord.attributes.product.operation_fee_ratio') %>:</dt>
-                                                <dd><%= @product.operation_fee_ratio %></dd>
-                                                <dt><%= t('activerecord.attributes.product.bonus') %>:</dt>
-                                                <dd><%= @product.bonus %></dd>
-                                                <dt><%= t('activerecord.attributes.product.sales_fee_ratio') %>:</dt>
-                                                <dd><%= @product.sales_fee_ratio %></dd>
-
-                                            </dl>
-                                        </div>
-                                        <div class="col-lg-7" id="cluster_info">
-                                            <dl class="dl-horizontal">
-
-                                              <dt><%= t('activerecord.attributes.product.management_fee_ratio') %>:</dt>
-                                              <dd><%= @product.management_fee_ratio %> </dd>
-                                              <dt><%= t('activerecord.attributes.product.management_fee_flour') %>:</dt>
-                                              <dd><%= @product.management_fee_flour %> </dd>
-                                              <dt><%= t('activerecord.attributes.product.investment_consultant_fee_ratio') %>:</dt>
-                                              <dd><%= @product.investment_consultant_fee_ratio %> </dd>
-                                              <dt><%= t('activerecord.attributes.product.investment_consultant_fee_flour') %>:</dt>
-                                              <dd><%= @product.investment_consultant_fee_flour %> </dd>
-
-                                            </dl>
-                                        </div>
-                                    </div>
-
+                                <% @tabs.each do |tab| %>
+                                <% if @current_tab == tab %>
+                                <div class="tab-pane active">
+                                <% else %>
+                                <div class="tab-pane">
+                                <% end %>
+                                    <%= render "show_tab_#{tab}" if tab == @current_tab %>
                                 </div>
-                                <div class="tab-pane" id="tab-2">
-                                    <div class="row">
-                                        <div class="col-lg-5">
-                                            <dl class="dl-horizontal">
-
-                                                <dt><%= t('activerecord.attributes.product.sse_account_code') %>:</dt>
-                                                <dd><%= @product.sse_account_code %></dd>
-                                                <dt><%= t('activerecord.attributes.product.szse_account_code') %>:</dt>
-                                                <dd><%= @product.szse_account_code %></dd>
-                                                <dt><%= t('activerecord.attributes.product.cffex_account_code') %>:</dt>
-                                                <dd><%= @product.cffex_account_code %></dd>
-
-                                            </dl>
-                                        </div>
-                                        <div class="col-lg-7" id="cluster_info">
-                                            <dl class="dl-horizontal">
-
-                                              <dt><%= t('activerecord.attributes.product.zce_account_code') %>:</dt>
-                                              <dd><%= @product.zce_account_code %> </dd>
-                                              <dt><%= t('activerecord.attributes.product.dce_account_code') %>:</dt>
-                                              <dd><%= @product.dce_account_code %> </dd>
-                                              <dt><%= t('activerecord.attributes.product.shfe_account_code') %>:</dt>
-                                              <dd><%= @product.shfe_account_code %> </dd>
-
-                                            </dl>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="tab-pane" id="tab-3">
-                                    <div class="row">
-                                        <div class="col-lg-12">
-                                            <div class="m-b-md">
-                                                <div class="pull-right">
-                                                    <%= link_to '添加投资人', nil, class: 'btn btn-white btn-sm' %>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <%= render 'clients_grid' %>
-                                </div>
+                                <% end %>
                             </div>
+
                         </div>
                     </div>
                 </div>
