--- a/lib/templates/erb/scaffold/show.html.erb
+++ b/lib/templates/erb/scaffold/show.html.erb
@@ -34,7 +34,7 @@
                         <dd>Value</dd>
                     </dl>
                 </div>
-                <div class="col-lg-7" id="cluster_info">
+                <div class="col-lg-7">
                     <dl class="dl-horizontal">
                         <dt>Field2: </dt>
                         <dd>Value</dd>
@@ -70,7 +70,7 @@
                                 <%% else %>
                                 <div class="tab-pane">
                                 <%% end %>
-                                    <%%= tab.to_s %>
+                                    <%= render "show_tab_#{tab}" if tab == @current_tab %>
                                 </div>
                                 <%% end %>
                             </div>
