--- a/lib/templates/erb/scaffold/show.html.erb
+++ b/lib/templates/erb/scaffold/show.html.erb
@@ -54,7 +54,7 @@
                                     <%% else %>
                                     <li class="">
                                     <%% end %>
-                                      <%%= link_to tab.to_s, <%= plural_name.singularize %>_path(@<%= plural_name.singularize %>, tab: tab) %>
+                                      <%%= link_to t("activerecord.attributes.<%= plural_name.singularize %>.tabs.#{tab}"), <%= plural_name.singularize %>_path(@<%= plural_name.singularize %>, tab: tab) %>
                                     </li>
                                     <%% end %>
                                 </ul>
@@ -70,7 +70,7 @@
                                 <%% else %>
                                 <div class="tab-pane">
                                 <%% end %>
-                                    <%= render "show_tab_#{tab}" if tab == @current_tab %>
+                                    <%%= render "show_tab_#{tab}" if tab == @current_tab %>
                                 </div>
                                 <%% end %>
                             </div>
