--- a/app/views/consultants/_form.html.erb
+++ b/app/views/consultants/_form.html.erb
@@ -1,7 +1,24 @@
-<%= simple_form_for(@consultant) do |f| %>
+<%= simple_form_for(@consultant, html: { class: 'form-horizontal' }) do |f| %>
   <%= f.error_notification %>
 
-  
+  <div class="row">
+      <div class="col-lg-6">
+        <%= f.input :name %>
+        <%= f.input :short_name %>
+        <%= f.input :person_in_charge_name %>
+        <%= f.input :capital, as: :string, input_html: {autocomplete: 'off'} %>
+        <%= f.input :company_address %>
+        <%= f.simple_fields_for :department do |dp| %>
+          <%= dp.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.consultant.department_id') %>
+          <%= dp.input :id, as: :hidden %>
+        <% end %>
+      </div>
+      <div class="col-lg-6">
+        <%= f.input :institution_type, collection: Consultant.institution_types, as: :radio_buttons %>
+        <%= f.input :is_qualified_3rd_party_institution, as: :radio_buttons %>
+      </div>
+  </div>
+
   <div class="hr-line-dashed"></div>
 
   <div class="form-group">
@@ -13,3 +30,20 @@
       </div>
   </div>
 <% end %>
+
+<script type="text/javascript">
+
+  $.get('/departments.json', function(data) {
+    $('#consultant_department_attributes_name').typeahead({
+      source: data
+    }).change(function() {
+      var current = $(this).typeahead("getActive");
+      if (current) {
+        if (current.name == $(this).val()) {
+          $('#consultant_department_attributes_id').val(current.id);
+        }
+      }
+    });
+  });
+
+</script>
