--- a/app/views/consultants/show.html.erb
+++ b/app/views/consultants/show.html.erb
@@ -30,14 +30,24 @@
             <div class="row">
                 <div class="col-lg-5">
                     <dl class="dl-horizontal">
-                        <dt>Field1: </dt>
-                        <dd>Value</dd>
+                        <dt><%= t('activerecord.attributes.consultant.short_name') %>:</dt>
+                        <dd><%= @consultant.short_name %></dd>
+                        <dt><%= t('activerecord.attributes.consultant.capital') %>:</dt>
+                        <dd><%= @consultant.capital %></dd>
+                        <dt><%= t('activerecord.attributes.consultant.person_in_charge_name') %>:</dt>
+                        <dd><%= @consultant.person_in_charge_name %></dd>
+                        <dt><%= t('activerecord.attributes.consultant.company_address') %>:</dt>
+                        <dd><%= @consultant.company_address %></dd>
                     </dl>
                 </div>
                 <div class="col-lg-7">
                     <dl class="dl-horizontal">
-                        <dt>Field2: </dt>
-                        <dd>Value</dd>
+                      <dt><%= t('activerecord.attributes.consultant.institution_type') %>:</dt>
+                      <dd><%= Consultant.institution_type_names[@consultant.institution_type] %></dd>
+                      <dt><%= t('activerecord.attributes.consultant.department_id') %>:</dt>
+                      <dd><%= @consultant.department.name if @consultant.department %></dd>
+                      <dt><%= t('activerecord.attributes.consultant.is_qualified_3rd_party_institution') %>:</dt>
+                      <dd><%= @consultant.is_qualified_3rd_party_institution ? '是' : '否' %></dd>
                     </dl>
                 </div>
             </div>
