added basic role authentication infrastructure

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,27 @@
-<%= simple_form_for(@user) do |f| %>
+<%= simple_form_for(@user, html: { class: 'form-horizontal' } ) do |f| %>
   <%= f.error_notification %>
 
-  
-  <div class="hr-line-dashed"></div>
+<div class="row">
+    <div class="col-lg-6">
+        <%= f.input :name %>
+        <%= f.input :username %>
+        <%= f.input :email %>
+        <%= f.input :password %>
+        <%= f.input :password_confirmation %>
+    </div>
+    <div class="col-lg-6">
+        <%= f.association :roles, collection: Role.all, label_method: :description, as: :check_boxes %>
+    </div>
+</div>
 
-  <div class="form-group">
-      <div class="pull-right m-r-md">
-          <%= f.submit t('buttons.save'), class: 'btn btn-primary btn-w-m' %>
-      </div>
-      <div class="m-l-md">
+<div class="hr-line-dashed"></div>
+
+<div class="form-group">
+    <div class="pull-right m-r-md">
+        <%= f.submit t('buttons.save'), class: 'btn btn-primary btn-w-m' %>
+    </div>
+    <div class="m-l-md">
         <%= link_to t('activerecord.text.back_to_list', model: User.model_name.human), users_path, class: 'btn btn-white' %>
-      </div>
-  </div>
+    </div>
+</div>
 <% end %>
