--- a/app/views/users/_users_grid.html.erb
+++ b/app/views/users/_users_grid.html.erb
@@ -37,6 +37,10 @@
   end
 
   g.column html: {class: 'project-actions'} do |user|
+    link_to(fa_icon("briefcase", text: '成为产品经理'), upgrade_to_product_manager_path(user), method: :post, class: 'btn btn-white btn-xs', data: {toggle: 'tooltip', confirm: '确定要将此帐号加入产品经理权限？'}, title: t('buttons.edit')) if user.product_manager.nil?
+  end
+
+  g.column html: {class: 'project-actions'} do |user|
     [
       link_to(fa_icon("pencil"), edit_user_path(user), class: 'btn btn-white btn-xs', data: {toggle: 'tooltip'}, title: t('buttons.edit')),
       link_to(fa_icon("trash"), user_path(user), class: 'btn btn-danger btn-xs', method: :delete, data: {toggle: 'tooltip', confirm: t('confirms.delete')}, title: t('buttons.delete'))
