--- a/app/views/staffs/_search_form.html.erb
+++ b/app/views/staffs/_search_form.html.erb
@@ -1,14 +1,14 @@
-<%= simple_form_for(@query_user_params,
-  url: search_users_path, as: :user,
+<%= simple_form_for(@query_staff_params,
+  url: search_staffs_path, as: :staff,
   method: :post, wrapper: :vertical_form) do |f| %>
 
   <%= f.error_notification %>
 
-  <%= f.input :login, required: false, label: t('activerecord.attributes.user.login') %>
+  <%= f.input :name, required: false, label: t('activerecord.attributes.staff.name') %>
   <!-- add more query parameter fields here -->
 
   <div class="form-group">
-      <%= link_to t('buttons.reset'), users_path,
+      <%= link_to t('buttons.reset'), staffs_path,
         class: 'btn btn-white btn-sm' %>
       <%= f.submit t('buttons.search'),
         class: 'btn btn-primary btn-sm pull-right' %>
