--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -38,6 +38,10 @@
         <%= department.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.product.sales_department') %>
         <%= department.input :id, as: :hidden %>
       <% end %>
+      <%= f.simple_fields_for :consultant do |consultant| %>
+        <%= consultant.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.product.consultant') %>
+        <%= consultant.input :id, as: :hidden %>
+      <% end %>
     </div>
     <div class="col-lg-6">
       <%= f.simple_fields_for :operation_department do |department| %>
