--- a/app/views/products/_show_tab_consultant.html.erb
+++ b/app/views/products/_show_tab_consultant.html.erb
@@ -1,4 +1,14 @@
 <div class="row">
+    <div class="col-lg-12">
+        <div class="m-b-md">
+            <div class="pull-right">
+                <%= link_to t('activerecord.text.edit_instance', model: Consultant.model_name.human), @consultant.nil? ? new_consultant_path(product_id: @product.id) : edit_consultant_path(@consultant), class: 'btn btn-white btn-sm' %>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
   <div class="col-lg-5">
       <dl class="dl-horizontal">
 
